<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.usthe</groupId>
	<artifactId>bootshiro</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>bootshiro</name>
	<description>Demo project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.0.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<mybatis.spring.boot.version>1.3.1</mybatis.spring.boot.version>
		<druid.version>1.1.6</druid.version>
		<pagehelper.version>5.1.2-beta</pagehelper.version>
		<mybatis-generator.version>1.3.5</mybatis-generator.version>
		<shiro.version>1.3.2</shiro.version>
		<fastjson.version>1.2.38</fastjson.version>
		<jjwt.version>0.9.0</jjwt.version>

		<junit.version>4.12</junit.version>
		<log4j.version>1.2.16</log4j.version>
		<slf4j.version>1.7.5</slf4j.version>
		<mysql.version>5.1.6</mysql.version>
		<commons-logging.version>1.2</commons-logging.version>
		<commons-fileupload.version>1.2.1</commons-fileupload.version>
		<commons-io.version>1.3.2</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
	</properties>

	<dependencies>
		<!-- redis -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!--database-->
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>${mybatis.spring.boot.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>${druid.version}</version>
		</dependency>

		<!-- 分页支持pageHelper -->
		<dependency>
			<groupId>com.github.pagehelper</groupId>
			<artifactId>pagehelper</artifactId>
			<version>${pagehelper.version}</version>
		</dependency>
		<!-- mybatis 逆向工程 -->
		<dependency>
			<groupId>org.mybatis.generator</groupId>
			<artifactId>mybatis-generator-core</artifactId>
			<version>${mybatis-generator.version}</version>
		</dependency>

		<!-- shiro安全框架 -->
		<!--<dependency>-->
			<!--<groupId>org.apache.shiro</groupId>-->
			<!--<artifactId>shiro-core</artifactId>-->
			<!--<version>${shiro.version}</version>-->
		<!--</dependency>-->
		<!--<dependency>-->
			<!--<groupId>org.apache.shiro</groupId>-->
			<!--<artifactId>shiro-web</artifactId>-->
			<!--<version>${shiro.version}</version>-->
		<!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.apache.shiro</groupId>-->
			<!--<artifactId>shiro-quartz</artifactId>-->
			<!--<version>${shiro.version}</version>-->
		<!--</dependency>-->
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-spring</artifactId>
			<version>${shiro.version}</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jjwt.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${commons-lang.version}</version>
		</dependency>

		<!--json-->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>

        <!--test-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>


</project>
